--- a/BinaryIO/BinaryIO.vcxproj.filters
+++ b/BinaryIO/BinaryIO.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="..\StressTensor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\HelperSymmetricMatrix.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\BinaryReader.cpp">
